# stage_ros2

./: .clangd_format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  package.xml
include/: camera_wrapper.hpp  position_wrapper.hpp  ranger_wrapper.hpp  robot_wrapper.hpp
include/stage_ros2/: camera_wrapper.hpp  position_wrapper.hpp  ranger_wrapper.hpp  robot_wrapper.hpp  transform_broadcaster.hpp
launch/: stage.launch.py
src/: stage_ros2.cc
src/stage_ros2/: camera_wrapper.cpp  position_wrapper.cpp  ranger_wrapper.cpp  robot_wrapper.cpp  transform_broadcaster.cpp
worlds/: willow-four-erratics.world
